# DQC-Switch-QNet

./: README.md  pyproject.toml
configs/: default_qdc.yaml  experiment_suites.yaml
outputs/ablation/: ablation_runtime_table.csv  ablation_runtime_table.md  ablation_summary.csv
outputs/algorithm_comparison/: algorithm_comparison.csv  algorithm_comparison.md  algorithm_summary.md
outputs/benchmarks/: benchmark_runtime_table.csv  benchmark_runtime_table.md  benchmark_summary.csv
outputs/framework_comparison/: framework_summary.csv  framework_summary.md
outputs/representative/: average_direct_gantt.csv  average_gantt.csv  greedy_unified_gantt.csv  random_gantt.csv  summary.csv  summary.md
outputs/scaling/: scaling_heatmap.csv  scaling_summary.csv  scaling_summary.md
outputs/sensitivity/: sensitivity_heatmap.csv  sensitivity_summary.csv  sensitivity_summary.md
outputs/topology_comparison/: topology_summary.csv  topology_summary.md
src/qdc_project/algorithms/: batching_policy.py  placement_greedy.py  retry_policy.py  scheduler_baseline.py  scheduler_unified.py  split_policy.py
src/qdc_project/circuit/: benchmark_families.py  dag_utils.py  loaders.py  synthetic_generators.py
src/qdc_project/experiments/: run_ablation.py  run_algorithm_comparison.py  run_benchmarks.py  run_framework_comparison.py  run_paper_figures.py  run_representative.py  run_scaling.py  run_sensitivity.py  run_topology_comparison.py
src/qdc_project/model/: constraints.py  metrics.py  state.py
src/qdc_project/plotting/: barplots.py  gantt.py  (+4 more)
tests/: test_simulator_invariants.py
(+6 files in other folders)
